# fastapi-request-pipeline

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  llms.txt  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/: README.md  api-reference.md  deployment.md  glossary.md  quickstart.md  user-guide.md
examples/: 01_basic_usage.py  02_authentication.py  03_permissions.py  04_rate_limiting.py  05_flow_composition.py  06_custom_components.py  07_real_world_app.py  README.md  __init__.py
src/fastapi_request_pipeline/: __init__.py  _types.py  component.py  composition.py  context.py  dependency.py  exceptions.py  flow.py  hooks.py  openapi.py  trace.py
src/fastapi_request_pipeline/components/: __init__.py  authentication.py  features.py  filters.py  pagination.py  permissions.py  throttling.py
tests/: conftest.py
tests/contract/: test_public_api.py
tests/integration/: test_flow_composition.py  test_flow_dependency.py  test_openapi.py  test_performance.py  test_quickstart.py
tests/unit/: test_component.py  test_composition.py  test_context.py  test_exceptions.py  test_flow.py  test_hooks.py  test_trace.py
tests/unit/components/: test_authentication.py  test_features.py  test_filters.py  test_pagination.py  test_permissions.py  test_throttling.py
